# baremetal-llm

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
architecture/: index.html
baremetal_llm/: alignment.py  cli.py  foundation.py  scaling.py
baremetal_llm/utils/: __init__.py  checkpoints.py  device.py  paths.py
curriculum/: index.html
data/: tiny_corpus.txt
demo/: index.html
demos/: app.py
docs/: api.md  architecture.md  curriculum.md  demo.md  getting-started.md  index.md
docs/stylesheets/: extra.css
getting-started/: index.html
notebooks/: 01_quick_demo.ipynb  02_full_curriculum.ipynb
parts/: _common.py
parts/part_1/: orchestrator.py
parts/part_2/: orchestrator.py
parts/part_3/: orchestrator.py
parts/part_4/: orchestrator.py
parts/part_5/: orchestrator.py
parts/part_6/: orchestrator.py
parts/part_7/: orchestrator.py
parts/part_8/: orchestrator.py
parts/part_9/: orchestrator.py
phase_1/: README.md  foundation.py  orchestrator.py
phase_2/: README.md  orchestrator.py  scaling.py
phase_3/: README.md  alignment.py  orchestrator.py
scripts/: train_cpu.sh  train_gpu.sh
search/: search_index.json
space/: DEPLOY.md  README.md  requirements.txt
tests/: test_alignment.py  test_cli.py  test_foundation.py  test_scaling.py
