[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baremetal-llm"
version = "0.2.0"
description = "From-scratch LLM stack: transformers, MoE, SFT, and RLHF (PPO/GRPO)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rashal" }]
keywords = ["llm", "pytorch", "transformer", "rlhf", "education"]
dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "tokenizers>=0.21",
  "datasets>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mkdocs-material>=9.0"]
demo = ["gradio>=4.0"]

[project.scripts]
baremetal = "baremetal_llm.cli:main"

[tool.setuptools.packages.find]
include = ["baremetal_llm*"]

[tool.setuptools.package-data]
baremetal_llm = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running demo smoke tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"parts/*/orchestrator.py" = ["E402"]
"phase_*/*.py" = ["F403"]
